--- a/frontend/stylesheets/samples-targets.scss
+++ b/frontend/stylesheets/samples-targets.scss
@@ -32,26 +32,61 @@
   position: fixed;
 }
 
+table.sample-target-table thead::-webkit-scrollbar {
+    background: transparent;  /* optional: just make scrollbar invisible */
+}
+
+table.sample-target-table{
+    th.text-center,
+    td.text-center{
+        text-align: center;
+    }
+}
+
 .samples, .targets{
     table{
         width: 100%;
-        height: calc(100% - 60px);
+        height: calc(100% - 100px);
+        td, th{
+            font-size: 13px;
+            font-family: 'dinot-medium';            
+        }
+
+        .channel-selector{
+            border: 1px solid gray;
+            border-radius: 2px;
+            height: 28px;
+            box-shadow: 0px 0px 2px #888;
+            min-width: 40px;
+            max-width: 60px;
+            margin: auto;
+            span{
+                width:45%;
+                display:inline-block;
+                text-align:center;
+                cursor: pointer;
+                line-height: 24px;
+            }
+        }
     }
     padding-left: 50px !important;
     padding-right: 50px !important;
-    padding-top: 20px;
+    padding-top: 10px;
     p{
         font-family: 'dinot-bold';
         border-bottom: 2px solid black;
+        line-height: 35px;
+        font-size: 14px;        
     }
     input{
         font-size: 13px;
-        font-family: 'dinot';
+        font-family: 'dinot-medium';
         vertical-align: middle;
+        width: 100%;
     }
 
     .add-span{
-        font-family: 'dinot';
+        font-family: 'dinot-medium';
         cursor: pointer;
         display: inline-block;
         border: 1px solid black;
@@ -59,7 +94,6 @@
         margin-top: 5px;
         padding: 7px;
         position: relative;
-        top: -20px;
         .add-plus{
             width: 13px;
             margin-top: -5px;
@@ -76,6 +110,20 @@
         max-width: 30px;
         vertical-align: middle;
         cursor: pointer;
+    }
+
+    .assigned-icon{
+        width: 20px;
+        vertical-align: middle;
+        cursor: pointer;
+        margin: 0 5px;
+    }
+
+    .lock-icon{
+        width: 15px;
+        vertical-align: middle;
+        cursor: pointer;
+        margin: 0 5px;
     }
 
     .color{
@@ -128,7 +176,7 @@
     }
 
     .select-channel-border{
-        border-bottom: 1px solid red;
+        border-bottom: 2px solid #ea1c4d;
     }
 }
 
@@ -136,6 +184,7 @@
     height: 50px;
     box-shadow: 0 2px 3px #aaa;
     margin-bottom: 5px;
+    padding: 0px 50px 0px 30px !important;
 
     &::after{
         content: ' ';
@@ -144,8 +193,38 @@
 
     h4{
         font-family: 'dinot-bold';
-        font-size: 13px;
+        font-size: 14px;
         margin: 0;
         line-height: 50px;
+    }
+}
+
+.modal-open-confirm-delete{
+    .modal {
+      text-align: center;
+    }
+
+    @media screen and (min-width: 768px) { 
+      .modal:before {
+        display: inline-block;
+        vertical-align: middle;
+        content: " ";
+        height: 100%;
+      }
+    }
+
+    .modal-dialog {
+      display: inline-block;
+      text-align: left;
+      vertical-align: middle;
+      box-shadow: 1px 1px 4px #777;
+      border-radius: 3px;
+      width: 450px;
+
+        .modal-content{
+            border-radius: 3px;
+            border: none;
+            box-shadow: none;
+        }
     }
 }
