--- a/frontend/javascripts/app/views/samples-targets.html
+++ b/frontend/javascripts/app/views/samples-targets.html
@@ -50,7 +50,7 @@ limitations under the License.
           <tbody>
             <tr ng-repeat="rowContent in rows track by $index">
                 <td style="border-bottom:1px solid #bbb;">
-                    <input style="border:0px;padding:0px;" type="text" ng-blur="updateSample(rowContent.id,rowContent.name,$index)" ng-focus="focusSample(rowContent.id,rowContent.name,$index)" placeholder="Enter Sample Name" class="" ng-model="rowContent.name">
+                    <input style="border:0px;padding:0px;outline: none;width:100%;" type="text" ng-blur="updateSample(rowContent.id,rowContent.name,$index)" ng-focus="focusSample(rowContent.id,rowContent.name,$index)" placeholder="Enter Sample Name" class="" ng-model="rowContent.name">
                 </td>
                 <td style="border-bottom:1px solid #bbb;" class="text-center">
                     <img class="assigned-icon" src="/images/assigned.svg" alt="" ng-show="rowContent.assigned">
@@ -86,7 +86,7 @@ limitations under the License.
           <tbody>
             <tr ng-repeat="targetContent in targets track by $index">
                 <td style="border-bottom:1px solid #bbb;">
-                    <input style="border:0px;padding:0px;width:100%" type="text" ng-blur="updateTargetName(targetContent.id,targetContent.name,$index)" ng-focus="focusTarget(targetContent.id,targetContent.name,$index)" placeholder="Enter Target Name"  class="" ng-model="targetContent.name">
+                    <input style="border:0px;padding:0px;width:100%;outline: none;" type="text" ng-blur="updateTargetName(targetContent.id,targetContent.name,$index)" ng-focus="focusTarget(targetContent.id,targetContent.name,$index)" placeholder="Enter Target Name"  class="" ng-model="targetContent.name">
                 </td>
                 <td style="border-bottom:1px solid #bbb; padding: 0 2px; width: 80px;" class="text-center">
                     <div ng-show="targetContent.selectChannel"  class="channel-selector">
